<resources>
    <string name="app_name">Enviroscope</string>
    <string name="app_logo">Enviroscope logo</string>
    <string name="button_environmental">Environment button</string>
    <string name="button_air_quality">Air Quality Button</string>
    <string name="button_traffic">Traffic button</string>
    <string name="button_weather">Weather button</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_forum">Forum</string>
    <string name="button_menu">Menu button</string>
    <string name="button_refresh">Refresh button</string>

    <!-- Strings related to login -->
    <string name="facebook_app_id">2040301499520945</string>
    <string name="fb_login_protocol_scheme">fb2040301499520945</string>

    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="submit">Submit</string>
    <string name="submitInfoTxt">You are submitting a page to this forum. Please write a clear title about the issue you are concerned about </string>
    <string name="action_register">Register</string>
    <string name="action_facebook">Log in with Facebook</string>
    <string name="action_without_login">Continue without logging in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="comments">Comments</string>
    <string name="commentTxt">Enter comment here</string>
    <string name="commentBtn">Post</string>
    <string name="Bump">Bump</string>
    <string name="title_activity_forum_page">Post</string>
    <string name="title_activity_submit_page">SubmitPageActivity</string>

    <!-- Strings related to alert dialog -->
    <string name="alert_title">Logout?</string>
    <string name="alert_message">Are you sure you want to logout?</string>
    <string name="alert_positive">Yes</string>
    <string name="alert_negative">Cancel</string>

    <!-- Strings related to help page -->
    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_email">Your Email</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send Message</string>
    <string name="contact_form_post_message">Please wait</string>
    <string name="contact_posted">Your message has been successfully delivered.</string>



    <array name="polutionTypes">
        <item>Sound</item>
        <item>Temperature</item>
        <item>Humidity</item>
        <item>NO2</item>
        <item>NO</item>
        <item>CO</item>
        <item>Wind_speed</item>
        <item>NOX</item>
        <item>O3</item>
        <item>Pressure</item>
        <item>Rain_Accumulation</item>
        <item>Rain_Fall</item>
        <item>Sewage_Level</item>
        <item>Solar_Diffuseradiation</item>
        <item>Visiblity</item>
    </array>

    <string name="title_activity_register">RegisterActivity</string>
    <string name="contact_activity">ContactUsActivity</string>
    <string name="loading_bar_activity">LoadingBarActivity</string>

    <string name="reg_registration">Registration</string>
    <string name="reg_username">Username</string>
    <string name="reg_password">Password</string>
    <string name="reg_create_account">Create Account</string>
    <string name="reg_go_back">Go back</string>

</resources>
