<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/submitInfoTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submitInfoTxt"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">


        <android.support.design.widget.TextInputEditText
            android:id="@+id/titleInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/title"
            android:maxLength="50"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/descriptionInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/text"
            android:maxLength="140" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/submitPageBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

</LinearLayout>

